<resources>
    <string name="app_name">Student Avatar</string>
    <string name="guide_details">Details</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header">Navigation Header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_sent">An email to reset your password has been sent. If you don\'t find it in your inbox, please check your Junk folder.</string>
    <string name="disclaimer">Information displayed within this app are for testing purposes only.</string>
    <string name="heading_recent">Posts</string>
    <string name="heading_my_posts">My Posts</string>
    <string name="heading_my_top_posts">My Top Posts</string>
    <string name="heading_discover">Discover</string>
    <string name="heading_announcements">Announcements</string>
    <string name="heading_calendar">Calendar</string>
    <string name="heading_map">Map</string>
    <string name="heading_general">Details</string>
    <string name="heading_faq">FAQs</string>
    <string name="heading_checklist">Checklist</string>
    <string name="heading_handbook">Handbook</string>
    <string name="guide_name">My First Guide</string>
    <string name="faq_name">My First FAQ</string>


    <!--Calendar strings start I need to find a way to use these properly or they'll just be placeholders-->
    <string name="helloText">Calendar</string>
    <string name="note_switch">Notifications (only certain events)</string>

    <string name="filter_btn">Event Filters</string>

    <string name="NoEventText">No Activity Detected</string>
    <string name="titleText">Title: %1$s</string>
    <string name="subTitleText">Sub Title: %1$s</string>
    <string name="dateText">%1$s</string>
    <string name="timeText">Time: %1$s</string>
    <string name="locationText">Location: %1$s</string>
    <string name="descText">Description: %1$s</string>
    <string name="guideButton">Goto guide</string>
    <!--Calendar strings end-->

    <!--calendar filter strings start-->
    <string name="filterText">Calendar Filter</string>
    <string name="filterIns">Toggles selected items on calendar list</string>

    <string name="filterGeneral">Events</string>
    <string name="filterUnit">Units</string>
    <string name="filterClub">Clubs</string>

    <string name="filterHint">Tap to choose unit/club to show</string>

    <string name="filterHintHint">You may keep tapping to add more items to filter. These entries will override the switch above</string>

    <!--calendar filter strings end-->

    <!--Link strings start-->
    <string name="otherServicesText">Other Student Services</string>
    <string name="canteenLinkText"><u>Student Canteen</u></string>
    <string name="libraryLinkText"><u>Student Library</u></string>
    <string name="mphLinkText"><u>Student MPH</u></string>
    <string name="intallmentCalculatorText"><u>Installment Calculator</u></string>
    <string name="feedbackText">Feedback</string>
    <!--Link strings start-->

    <!--Calculator strings start-->
    <string name="installTitleText">Installment Payment Calculator (per semester)</string>
    <string name="totalAmountText">Total Amount needed for semester</string>
    <string name="initialText">Initial payment percentage</string>
    <string name="thirtyText">30%</string>
    <string name="fiftyText">50%</string>
    <string name="nowAmountText">Initial Percentage of the installment plan</string>
    <string name="nextAmountText">Consecutive Percentage</string>
    <string name="addTexttt">Add</string>
    <string name="valPerText">Enter the percentage....</string>
    <string name="valPerTotalText">=</string>
    <string name="clearTexttt">Clear</string>


    <string name="installTexttt">Installment</string>
    <string name="installNum">no....here</string>

    <string name="dueTexttt">Due by</string>
    <string name="dueNum">due date</string>

    <string name="amountTexttt">Amount</string>
    <string name="amountNum">no....erer</string>

    <string name="paidTexttt">Paid</string>
    <string name="paidNum">no....erer</string>


    <string name="waitTitleText">Amount list</string>
    <string name="waitText">Awaiting input....</string>

    <string name="totalPaidTitleText">Total paid</string>
    <string name="remainPaidTitleText">Total remaining fee</string>
    <string name="remainCurrentPaidTitleText">Current installment remaining fee</string>

    <string name="pay_edit_text">Input amount Paid</string>
    <string name="pay_btn_text">Paid</string>

    <!--Calculator strings end-->

    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_passwordless">Passwordless Authentication</string>
    <string name="desc_passwordless">Use only an email to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>

</resources>
