<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/intallrow_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/installNum"/>

    <EditText
        android:id="@+id/duerow_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/dueNum"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/amountrow_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amountNum"/>

    <TextView
        android:id="@+id/paidrow_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paidNum"/>

</merge>