<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="15dp"
    android:paddingEnd="3dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/TextView_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/filterText"
        android:textSize="17sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView_inst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="8dp"
        android:text="@string/filterIns"
        android:textSize="13sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/switchGeneral"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/filterGeneral" />

    <Switch
        android:id="@+id/switchUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/filterUnit" />

    <Switch
        android:id="@+id/switchClub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:textSize="18sp"
        android:text="@string/filterClub" />


</LinearLayout>
