<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="20dp"
    android:paddingEnd="0dp"
    android:layout_marginTop="20dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/TextView_OtherServices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otherServicesText"
        android:layout_marginTop="20dp"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/TextView_LinkCanteen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/canteenLinkText"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textColor="#005fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TextView_LinkLibrary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/libraryLinkText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#005fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TextView_LinkMph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mphLinkText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#005fff"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/TextView_Calculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intallmentCalculatorText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="#005fff"
        android:textSize="16sp" />

</LinearLayout>