<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card_item"
    android:layout_margin="3dp"
    card_view:cardCornerRadius="2dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/TextView_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titleText"
            android:textStyle="bold"
            android:layout_alignParentStart="true"
            android:textColor="#000000"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/TextView_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="italic"
            android:text="@string/timeText"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/TextView_relateTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView_title"
            android:layout_alignParentStart="true"
            android:layout_marginTop="7dp"
            android:text="@string/subTitleText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TextView_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textStyle="italic"
            android:layout_below="@+id/TextView_time"
            android:layout_marginTop="3dp"
            android:text="@string/locationText"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/TextView_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/TextView_relateTo"
            android:layout_marginTop="10dp"
            android:text="@string/descText"
            android:textColor="#000000"
            android:visibility="gone"
            android:textSize="15sp" />

        <Button
            android:id="@+id/Button_gotoGuide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/TextView_desc"
            android:visibility="gone"
            android:text="@string/guideButton" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
