<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relLayCalenItem"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    >

    <TextView
        android:id="@+id/TextView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:text="@string/titleText"/>

    <TextView
        android:id="@+id/TextView_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/TextView_title"
        android:text="@string/locationText"/>

    <TextView
        android:id="@+id/TextView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_marginStart="15dp"
        android:layout_below="@+id/TextView_location"
        android:text="@string/timeText"/>


</RelativeLayout>