<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/helloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/helloText"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="19sp" />

    <Switch
        android:id="@+id/notiSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_switch"
        android:textSize="16sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/filtersButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/filter_btn"
        android:layout_marginBottom="10dp"
        />


    <CalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>